@@ -1,5 +1,5 @@
 plugins {
-    alias(libs.plugins.fabric.loom)
+    id 'fabric-loom' version '1.10.5'
 }
 
 base {
@@ -103,23 +103,12 @@ processResources {
         ])
     }
 }
-tasks.withType(JavaCompile).configureEach {
-    it.options.encoding = "UTF-8"
-    // Фиксируем версию Java, под которую пишется софт (например, 21)
-    it.options.release.set(21) 
-    
-    // Если вы используете превью-фичи (те самые unnamed classes), раскомментируйте строку ниже:
-    // it.options.compilerArgs.add("--enable-preview")
-}
 
 java {
-    // Включаем автодетект и автоскачивание Java 21 у всех разработчиков и на GitHub
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
-    }
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
 }
 
 tasks.withType(JavaCompile).configureEach {
     it.options.encoding = "UTF-8"
 }
-
